lemon/platform/grafana/config/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: grafana
  namespace: grafana
spec:
  virtualhost:
    fqdn: grafana.ik.am
    tls:
      secretName: projectcontour/default-tls-ik-am
  routes:
  - services:
    - name: grafana-service
      port: 3000
