lemon/platform/grafana/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.observability.accesslogs: "false"
    traefik.ingress.kubernetes.io/router.observability.metrics: "false"
    traefik.ingress.kubernetes.io/router.observability.tracing: "false"
  name: grafana
  namespace: grafana
spec:
  ingressClassName: traefik
  rules:
  - host: grafana.ik.am
    http:
      paths:
      - backend:
          service:
            name: grafana-service
            port:
              name: grafana
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.ik.am
    secretName: grafana-tls
